# doubleAgent

./: .gitignore  0.2.27  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: CI.yml  docker-build.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  create_db_tables.py  database.py  models.py  pyproject.toml  requirements.txt
backend/app/: chatbot.py  dev.py  main.py  oidc_uni_login.py  schemas.py
backend/app/db/: alembic.ini  database.py  models.py
backend/app/db/alembic/: env.py
backend/app/db/alembic-conf/: env.py
backend/app/db/alembic-conf/versions/: 2025_10_23_1721-b4335f12c0f6_initial_migration.py  2025_11_23_1330-09384c062e72_lengthen_prompt_column_of_prompt_table.py  2025_11_28_1533-dc000fe07d55_add_conversation_and_message_tables.py
backend/app/routers/: oidc_router.py
backend/docs/: documentation.md
backend/tests_back/: test_chatbot.py  test_conversations.py  test_get_conversation_history.py  test_main.py  test_prompts.py
components/: LoginPage.jsx  chat.jsx  login_page.jsx  oidc_uni_login.py
frontend/: .dockerignore  .prettierignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/docs/: documentation.md
frontend/public/: kayttoohje.md  tietosuojaseloste.md  tietosuojaselosteENG.md  user-guideENG.md  user-guideFIN.md
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: BotConfigurator.jsx  ChangePromptModal.jsx  Chat.jsx  Conversation.jsx  Conversation.test.jsx  DownloadChatButton.jsx  DownloadChatButton.test.jsx  HamburgerMenu.jsx  HamburgerMenu.test.jsx  HealthCheckButton.jsx  (+16 more)
manifests/: README.md  backend-deployment.yaml  backend-imagestream.yaml  backend-service.yaml  db-migration-job.yaml  frontend-deployment.yaml  frontend-imagestream.yaml  frontend-route.yaml  frontend-service.yaml
(+4 files in other folders)
