[tool.poetry]
name = "double-agent-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
langchain-core = "^0.3.0"
langgraph = "^0.2.28"
langchain-openai = "^0.2.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "app.dev:main"